@@ -64,6 +64,10 @@ Fixed parsing of locations in the xtide forecast.
 Minor cleanup to Standard skin for better out-of-the-box behavior:
  - default to no radar image instead of having every station point to Oregon
  - not every WMR100 is a WMR100N
+ 
+Failure to set an archive interval when using bar plots no longer results
+in an exception.
+
 
 2.5.1 12/30/13
 
